[gd_scene load_steps=10 format=3 uid="uid://bfpv78jrejjhx"]

[ext_resource type="Script" path="res://save&load/totem.gd" id="1_aevyt"]
[ext_resource type="Texture2D" uid="uid://bdta13630ij7o" path="res://Sprites world/Tilesets/totem.png" id="1_weqm2"]
[ext_resource type="Texture2D" uid="uid://bti0vm4lgfcjt" path="res://Спрайти/button-Q/act_with_seller.png" id="2_mn6s8"]
[ext_resource type="Texture2D" uid="uid://bkeiomnqwlloq" path="res://Спрайти/button-Q/act_with_seller2.png" id="3_s7j6c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cctwj"]
size = Vector2(58, 31)

[sub_resource type="CircleShape2D" id="CircleShape2D_lsfub"]
radius = 38.0132

[sub_resource type="Animation" id="Animation_dfgsy"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_mn6s8"), ExtResource("3_s7j6c")]
}

[sub_resource type="Animation" id="Animation_ngysp"]
resource_name = "button_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_mn6s8"), ExtResource("3_s7j6c")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjlag"]
_data = {
"RESET": SubResource("Animation_dfgsy"),
"button_animation": SubResource("Animation_ngysp")
}

[node name="totem" type="CharacterBody2D"]
z_index = 3
y_sort_enabled = true
script = ExtResource("1_aevyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 32.5)
shape = SubResource("RectangleShape2D_cctwj")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 46)
shape = SubResource("CircleShape2D_lsfub")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 13)
scale = Vector2(1.969, 2.032)
texture = ExtResource("1_weqm2")
offset = Vector2(0, -7)

[node name="actWithMe" type="Sprite2D" parent="."]
position = Vector2(40, -12)
scale = Vector2(0.421429, 0.421429)
texture = ExtResource("2_mn6s8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="actWithMe"]
libraries = {
"": SubResource("AnimationLibrary_yjlag")
}

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
